<resources>
    <string name="app_name">LifeShare</string>
    <string name="facebook_app_id">1079635295847776</string>
    <string name="fb_login_protocol_scheme">fb1079635295847776</string>
    <string name="client_id">232809425212015</string>
    <string name="client_secret">447b03a69ce41eaee55c6175b8383532</string>
    <string name="redirect_url">https://turftalk.staging9.com/admin/login/</string>
    <string name="callback_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://graph.instagram.com/%s?fields=id,username&amp;access_token=</string>
    <string name="instagram_auth">https://api.instagram.com/oauth/access_token</string>
    <string name="get_user_info_url_first">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="instagram_login">INSTAGRAM SIGN IN</string>
    <string name="agora_app_id">543b5d171b7743ffaf0757ffc423b724</string>
    <string name="rationale_video_app">This app needs access to your camera and mic so you can perform video calls</string>
    <string name="start_broadcast_by_enable_option_menu">Start broadcast by enable option menu</string>
    <string name="waiting_for_connection_msg">Waiting for connection with session</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="off">Off</string>
    <string name="term_of_services_text">These terms and conditions ("Terms", "Agreement") are an agreement between LifeShare LLC ("LifeShare LLC", "us", "we" or "our") and you ("User", "you" or "your").This Agreement sets forth the general terms and conditions of your use of the LifeShare mobile application and any of its products or services (collectively, "Mobile Application" or"Services"). Accounts and membership If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions. We may suspend,disable, or delete your account (or any part thereof) if we determine that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further registration. User content We do not own any data, information or material("Content") that you submit in the Mobile Application in the course of using the Service. You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness,and intellectual property ownership or right to use of all submitted Content. We may, but have no obligation to, monitor and review Content in the Mobile Application submitted or created using our Services by you. You grant us permission to access, copy, distribute, store, transmit,reformat, display and perform the Content of your user account solely as required for the purpose of providing the Services to you. Without limiting any of those representations or warranties, we have the right, though not the obligation, to, in our own sole discretion, refuse or remove any Content that, in our reasonable opinion, violates any of our policies or is in anyway harmful or objectionable. You also grant us the license to use, reproduce, adapt, modify,publish or distribute the Content created by you or stored in your user account for commercial,marketing or any similar purpose. Backups We are not responsible for Content residing in the Mobile Application. In no event shall we be held liable for any loss of any Content. It is your sole responsibility to maintain appropriate backup of your Content. Notwithstanding the foregoing,on some occasions and in certain circumstances, with absolutely no obligation, we may be able to restore some or all of your data that has been deleted as of a certain date and time when we may have backed up data for our own purposes. We make no guarantee that the data you need will be available. Advertisements During use of the Mobile Application, you may enter into correspondence with or participate in promotions of advertisers or sponsors showing their goods or services through the Mobile Application. Any such activity, and any terms,conditions, warranties or representations associated with such activity, is solely between you and the applicable third party. We shall have no liability, obligation or responsibility for any such correspondence, purchase or promotion between you and any such third party. Links to other mobile applications Although this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement,or affiliation with any linked mobile application, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk. Prohibited uses In addition to other terms as set forth in the Agreement, you are prohibited from using the Mobile Application or its Content: (a) for any unlawful purpose; (b) to solicit others to perform or participate in any unlawful acts; (c) to
violate any international, federal, provincial or state regulations, rules, laws, or local ordinances;(d) to infringe upon or violate our intellectual property rights or the intellectual property rights of others; (e) to harass, abuse, insult, harm, defame, slander, disparage, intimidate, or discriminate based on gender, sexual orientation, religion, ethnicity, race, age, national origin, or disability;(f) to submit false or misleading information; (g) to upload or transmit viruses or any other type of malicious code that will or may be used in any way that will affect the functionality or operation of the Service or of any related mobile application, other mobile applications, or the Internet; (h) to spam, phish, pharm, pretext, spider, crawl, or scrape; (i) for any obscene or immoral purpose; or (j) to interfere with or circumvent the security features of the Service or any related mobile application, other mobile applications, or the Internet. We reserve the right to terminate your use of the Service or any related mobile application for violating any of the prohibited uses. Intellectual property rights "Intellectual Property Rights" means all present and future rights conferred by statute, common law or equity in or in relation to any copyright and related rights, trademarks, designs, patents, inventions, goodwill and the right to sue for passing off, rights to inventions, rights to use, and all other intellectual property rights, in each case whether registered or unregistered and including all applications and rights to apply for and be granted, rights to claim priority from, such rights and all similar or equivalent rights or forms of protection and any other results of intellectual activity which subsist or will subsist now or in the future in any part of the world. This Agreement does not transfer to you any intellectual property owned by LifeShare LLC or third parties, and all rights, titles, and interests in and to such property will remain (as between the parties) solely with LifeShare LLC. All trademarks,service marks, graphics and logos used in connection with the Mobile Application or Services,are trademarks or registered trademarks of LifeShare LLC or LifeShare LLC licensors. Other trademarks, service marks, graphics and logos used in connection with the Mobile Application or Services may be the trademarks of other third parties. Your use of the Mobile Application and Services grants you no right or license to reproduce or otherwise use any LifeShare LLC or third party trademarks. Changes and amendments We reserve the right to modify this Agreement or its policies relating to the Mobile Application or Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will send you an email to notify you. Continued use of the Mobile Application after any such changes shall constitute your consent to such changes. Acceptance of these terms You acknowledge that you have read this Agreement and agree to all its terms and conditions. By using the Mobile Application or its Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to use or access the Mobile Application and its Services. Contacting us If you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may send an email to info@lifesharemobileapp.com This document was last updated on July 16, 2020</string>
    <string name="reject">Decline</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="conform">Confirm</string>
    <string name="term_of_services">Term Of Services</string>
    <string name="email">Email</string>
    <string name="email_hint">Email or Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search_connection">Search Connection</string>
    <string name="no_data_available">No data available</string>
    <string name="search">Search..</string>
    <string name="short_discription">Short description</string>
    <string name="phone_number">Phone Number</string>
    <string name="channel_name">Channel Name</string>
    <string name="forgot_password_without">Forgot Password</string>
    <string name="enter_your_channel_name">Enter your channel name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_short_description_of_channel">Enter Short Description of Channel</string>
    <string name="enter_your_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="change_profile_n_picture">Change Profile Picture</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="save">save</string>
    <string name="change_password">Change password</string>
    <string name="country">Country</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="Phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="enter_email_associated">Enter your email address associated with your account we will send you a link to reset your password.</string>
    <string name="title_home">Home</string>
    <string name="title_requests">Broadcast</string>
    <string name="post">Post</string>
    <string name="title_me">My Profile</string>
    <string name="title_connection">Friends</string>
</resources>