<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_send"
        android:title="@string/post" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/video_icon"
        android:title="@string/title_requests" />

    <item
        android:id="@+id/navigation_connection"
        android:icon="@drawable/users_icon"
        android:title="@string/title_connection" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_icon"
        android:title="@string/title_me" />

</menu>