<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lifeshare.ui.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.lifeshare.ui.ui.RequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_connection"
        android:name="com.lifeshare.ui.ui.ConnectionFragment"
        android:label="@string/title_connection"
        tools:layout="@layout/fragment_connection" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lifeshare.ui.ui.ViewProfileFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_view_profile" />

</navigation>