<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.ProfileActivity">

    <include layout="@layout/app_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar_new">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/size_20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/user_placeholder" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.SecondaryGreen.size14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_8dp"
                android:gravity="center"
                android:text="@string/change_profile_n_picture"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                style="@style/TextMedium.Black.size16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_16dp"
                android:gravity="center"
                android:visibility="gone"
                android:text="Static Name"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_channel_name"
                style="@style/TextRegular.Black.size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_8dp"
                android:visibility="gone"
                android:gravity="center"
                android:text="Static Channel Name" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20sp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:layout_marginStart="@dimen/size_8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/first_name"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_name"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12dp"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/last_name"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_last_name"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:gravity="center|left"
                android:hint="@string/enter_your_last_name"
                android:inputType="text"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12dp"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/channel_name"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_username"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:gravity="center|left"
                android:hint="@string/enter_user_name"
                android:inputType="text"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12dp"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/email"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:gravity="center|left"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/Phone_number"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone_number"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:gravity="center|left"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/address"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_country"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="@dimen/size_16dp"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/country"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_state"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="@dimen/size_16dp"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/State"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_city"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="@dimen/size_16dp"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/City"
                android:padding="@dimen/size_14dp"
                android:singleLine="true" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextRegular.Gray.size14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12dp"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/short_discription"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_short_discription"
                style="@style/edittext_style_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:gravity="start"
                android:hint="@string/enter_short_description_of_channel"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minLines="4"
                android:padding="@dimen/size_14dp"
                android:scrollbars="vertical" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_pass"
                style="@style/button_style_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_40dp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/change_password"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/button_style_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/cancel"
                android:visibility="gone"
                android:textAllCaps="false" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                style="@style/button_style_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:singleLine="true"
                android:text="@string/save"
                android:visibility="gone"
                android:textAllCaps="false" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>