<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ForgotPasswordActivity">

    <include layout="@layout/app_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_20dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextBold.Black.size34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40dp"
            android:text="@string/forgot_password_without" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextRegular.Black.size18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30dp"
            android:text="@string/enter_email_associated" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/edittext_style_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_50dp"
            android:drawablePadding="@dimen/size_16dp"
            android:gravity="center|left"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/size_14dp"
            android:singleLine="true" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset"
            style="@style/button_style_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginBottom="@dimen/size_8dp"
            android:singleLine="true"
            android:text="@string/reset_password"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>
